--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,9 @@
 services:
   k:
-    image: runtimeverificationinc/kframework-k:ubuntu-jammy-5.6.22
+    # image: runtimeverificationinc/kframework-k:ubuntu-noble-7.1.212
+    build:
+      context: ./
+      dockerfile: Dockerfile
     tty: true
     volumes:
       - ./src:/app
