Update README.md with kompilations commands and modify compose.yaml for debugging capabilities

--- a/compose.yaml
+++ b/compose.yaml
@@ -8,3 +8,7 @@ services:
     volumes:
       - ./src:/app
     working_dir: /app
+    cap_add:
+      - SYS_PTRACE
+    security_opt:
+      - seccomp=unconfined
